Reverted Index.html
reverted a HREF for blob storage containers

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </section>
                     <section>
                         <h2 id="blob-storage">Azure Blob Storage</h2>
-                        <a href="#" class="button purple" data-entry-url="https://abstorg1.blob.core.windows.net/storgcontainer1">Download from Azure Blob Storage</a>
+                        <a href="#" class="button purple" data-entry-url="https://azureheads.blob.core.windows.net/loadingdemo">Download from Azure Blob Storage</a>
                         <div class="results">Loading time: N/A ms</div>
                         <ul class="images clearfix">
                         </ul>
