Change in the footer
Modified footer for CDN demonstration

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <p>created by <a href="http://ppolyzos.com">Paris Polyzos</a></p>
+                <p>created by <a href=#>Abhijeet Karve</a></p>
             </footer>
         </div>
 
